# c-memoryAllocation-memoryOperations

./: .gitignore
malloc_free/: CMakeLists.txt  Makefile
malloc_free/includes/: free_custom.h  malloc_custom.h  memdef.h  memory_custom.h  memset_custom.h
malloc_free/src/: free_custom.c  main.c  malloc_custom.c  memory_custom.c  memset_custom.c
